--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "socket.io-client": "^4.8.1",
     "spotify-clone": "file:..",
     "tailwind-merge": "^2.6.0",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
   },
